Track view and listening view ok. Have top be functionnal with information, thread, etc...
Refacto have to me made (of course). About too many copy, so non
const, etc...

Going to sleep.

++

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required (VERSION 3.10.0)
 project (hello)
 
-add_executable(${PROJECT_NAME} src/main.cpp src/Player.cpp src/Track.cpp src/Library.cpp)
+add_executable(${PROJECT_NAME} src/Player.cpp src/Track.cpp src/Library.cpp)
 target_include_directories(${PROJECT_NAME} PUBLIC
   clipp/include
   rxterm/rxterm
