--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required (VERSION 3.10.0)
-project (hello)
+project (iplayer)
 
 add_executable(${PROJECT_NAME} src/Player.cpp src/Track.cpp src/Library.cpp)
 target_include_directories(${PROJECT_NAME} PUBLIC
